--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,14 @@ seaborn>=0.12.0
 plotly>=5.15.0
 joblib>=1.3.0
 python-dateutil>=2.8.0
+fastapi>=0.104.1
+uvicorn>=0.24.0
+python-multipart>=0.0.6
+statsmodels>=0.14.0
+sqlalchemy>=2.0.0
+psycopg2-binary>=2.9.0
+pymongo>=4.6.0
+dnspython>=2.4.0
+python-dotenv>=1.0.0
+requests>=2.31.0
+pytest>=7.4.0
